src/css/custom.css
:root {
  --ifm-background-deemphasized-color: #f4f1f8;
  --ifm-breadcrumb-color-active: var(--ifm-color-secondary-darkest);
  --ifm-code-font-size: 95%;
  --ifm-color-primary: var(--ifm-color-secondary-darkest);
  --ifm-color-secondary-darkest: #584e62;
  --ifm-font-family-base: "Libre Baskerville", Helvetica, Arial, system-ui;
  --ifm-font-family-monospace: "Red Hat Mono", Monaco, Consolas, monospace;
  --ifm-heading-font-family: "Libre Baskerville";
  --ifm-heading-font-weight: bold;
  --ifm-link-color: var(--ifm-color-secondary-darkest);
  --ifm-menu-color-active: var(--ifm-color-secondary-darkest);
  --ifm-pre-background: white;

  --lt-layout-width-full: 1234px;
  --lt-media-query-width-medium: 768px;
  --lt-media-query-width-large: 992px;
}

[data-theme="dark"] {
  --ifm-pre-background: rgb(46, 52, 64);
  --ifm-background-deemphasized-color: #222024;
  --ifm-link-color: #f4f1f8;
  --ifm-menu-color-active: var(--ifm-link-color);
  --ifm-color-primary: var(--ifm-link-color);
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

[data-theme="dark"] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

/* Header */

.navbar__items {
  gap: 1rem;
}

.navbar__link {
  border-bottom: 2px solid transparent;
  position: relative;
}

.navbar__link::after {
  content: "";
  display: block;
  height: 2px;
  left: 0.75rem;
  margin-top: 2px;
  position: absolute;
  right: 0.75rem;
  transition: background var(--ifm-transition-fast);
}

.navbar__link,
.navbar__title {
  font-weight: bold;
}

.navbar__link--active,
.navbar__link:hover {
  color: initial;
}

.navbar__link--active::after {
  background: var(--ifm-navbar-link-color);
}

.navbar__link:hover:not(.navbar__link--active)::after {
  background: var(--ifm-color-secondary-darker);
}

.navbar__title {
  margin-left: 0.75rem;
}

/* Code & Twoslash */

[data-theme="dark"] .shiki.min-light {
  display: none;
}

[data-theme="light"] .shiki.nord {
  display: none;
}

pre.shiki.nord > .code-container {
  padding: var(--ifm-pre-padding);
}

pre.shiki.nord > .code-container > code {
  display: block;
  position: relative;
}

/* Override for inaccessible (barely visible) light mode comments */
.shiki.min-light span[style="color: rgb(194, 195, 197);"],
.shiki.min-light span[style="color:#C2C3C5"] {
  color: #576 !important;
}

/* Override for inaccessible (barely visible) dark mode comments */
.shiki.nord span[style="color: rgb(97, 110, 136);"],
.shiki.nord span[style="color:#616E88"] {
  color: #8a9 !important;
}

/* Bodies */

article .markdown a {
  text-decoration: underline;
}

/* Sidebar */

a[aria-current="page"] {
  font-weight: bold;
}

/* Table of Contents */

.table-of-contents__link--active {
  font-weight: bold;
}

